# scipy-rotation-array-api

./: README.md  benchmark.py  pyproject.toml  tox.ini
rotate/: __init__.py  rotate.py
tests/: test_against_scipy.py  test_properties.py
